<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_title">My Nanodegree Apps!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_button_name">SPOTIFY STREAMER</string>
    <string name="scores_button_name">SCORES APP</string>
    <string name="library_button_name">LIBRARY APP</string>
    <string name="build_it_bigger_button_name">BUILD IT BIGGER</string>
    <string name="xyz_reader_button_name">XYZ READER</string>
    <string name="capstone_button_name">CAPSTONE: MY OWN APP</string>

</resources>
