<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_title"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/spotify_button_name"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:width="200dp"
            android:background="#F08C35"
            android:onClick="launchApp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/scores_button_name"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:width="200dp"
            android:background="#F08C35"
            android:onClick="launchApp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/library_button_name"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:width="200dp"
            android:background="#F08C35"
            android:onClick="launchApp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/build_it_bigger_button_name"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:width="200dp"
            android:background="#F08C35"
            android:onClick="launchApp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/xyz_reader_button_name"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:width="200dp"
            android:background="#F08C35"
            android:onClick="launchApp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/capstone_button_name"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:width="200dp"
            android:background="#F08C35"
            android:onClick="launchApp" />
    </LinearLayout>

</ScrollView>